feat: track price and ask to keep watching a size after restock